Update checkout dan Integrasi WA

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-green-50 text-gray-900 flex items-center justify-center min-h-screen px-6">
 
   <div class="max-w-md w-full text-center space-y-6">
-    <img src="images/banner.jpg" alt="Cover" class="w-full rounded-xl shadow-lg object-cover h-72">
+    <img src="images/banner2.jpg" alt="Cover" class="w-full rounded-xl shadow-lg object-cover h-[600px] sm:h-[400px] md:h-[500px]">
     <h1 class="text-4xl sm:text-5xl font-bold leading-tight">The Future<br>Looks Bright</h1>
     <a href="main.html" class="inline-block bg-green-600 hover:bg-green-700 text-white text-lg font-medium px-6 py-3 rounded-full transition">
       Go Shopping
