--- a/main.html
+++ b/main.html
@@ -33,10 +33,18 @@
 <header class="bg-white shadow sticky top-0 z-50">
   <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-2">
     <div class="text-green-600 text-xl font-bold">TokoParfum</div>
-    <div class="flex items-center gap-3">
-      <a href="admin/index.html" class="text-sm text-gray-500 hover:underline">Admin</a>
+    <div class="flex items-center gap-3 relative">
+        <button id="toggle-admin" class="md:hidden text-gray-500"><i class="fas fa-ellipsis-v"></i></button>
+        <div id="admin-link" class="absolute top-10 right-0 hidden bg-white border shadow px-4 py-2 rounded text-sm">
+          <a href="admin/index.html" class="text-gray-700 hover:text-green-600 flex items-center gap-2">
+            <i class="fas fa-user-shield"></i> Admin
+          </a>
+        </div>
+      <a href="admin/index.html" class="text-sm text-gray-500 hover:underline hidden md:inline-block" title="Admin">
+  <i class="fas fa-user-shield"></i>
+</a>
       <input id="search" type="text" placeholder="Cari parfum..." class="border rounded px-3 py-1 text-sm w-48" />
-      <a href="keranjang.html" class="cart-icon text-green-600 text-xl">
+      <a href="keranjang.html" class="cart-icon text-green-600 text-xl fixed bottom-4 right-4 bg-white p-3 rounded-full shadow-lg z-50">
         <i class="fas fa-shopping-cart"></i>
         <span id="cart-count" class="cart-count">0</span>
       </a>
@@ -77,15 +85,15 @@
 </div>
       </div>
       <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      
+      
     </div>
   </div>
 </section>
 
 <section class="max-w-6xl mx-auto px-4 py-6">
   <h1 class="text-2xl font-bold text-center mb-4">Daftar Parfum</h1>
-  <div id="products-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4"></div>
+  <div id="products-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"></div>
   <div class="flex justify-center items-center mt-4 gap-2">
   <button id="prev-btn" class="shadow px-3 py-1.5 rounded bg-white text-sm font-medium hover:bg-gray-100">&lt;</button>
   <span id="page-indicator" class="shadow px-3 py-1.5 rounded bg-white text-sm font-semibold">1</span>
@@ -106,7 +114,7 @@
 </div>
 
 <!-- Notifikasi Tambah Keranjang -->
-<div id="notif" class="fixed top-5 left-1/2 transform -translate-x-1/2 bg-green-500 text-white px-4 py-2 rounded shadow-lg text-sm hidden z-50 transition-all duration-300 ease-out">
+<div id="notif" class="fixed top-5 left-1/2 transform -translate-x-1/2 bg-green-500 text-white px-4 py-2 rounded shadow-lg text-sm hidden z-50 transition-all duration-300 ease-out animate-bounce">
   <span id="notif-message">Produk ditambahkan ke keranjang!</span>
 </div>
 
@@ -225,18 +233,28 @@
 <script>
   const swiper = new Swiper('.swiper', {
     loop: true,
+    effect: 'fade',
+    fadeEffect: { crossFade: true },
+    speed: 800,
     pagination: {
       el: '.swiper-pagination',
       clickable: true,
-    },
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
     },
     autoplay: {
       delay: 3000,
       disableOnInteraction: false,
     },
+    on: {
+      click: function () {
+        this.slideNext();
+      }
+    }
+  });
+</script>
+<script>
+  document.getElementById("toggle-admin").addEventListener("click", () => {
+    const menu = document.getElementById("admin-link");
+    menu.classList.toggle("hidden");
   });
 </script>
 </body>
