Update Keranjang dan Animation

--- a/keranjang.html
+++ b/keranjang.html
@@ -11,31 +11,72 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap');
     body { font-family: 'Outfit', sans-serif; }
-  </style>
+      .animate-fade-in {
+      animation: fadeIn 0.6s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+</style>
 
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
+<body class="bg-gray-100 text-gray-800 font-sans animate-fade-in">
 
 <header class="bg-white shadow">
   <div class="max-w-4xl mx-auto px-4 py-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold text-green-600">Keranjang</h1>
-    <a href="index.html" class="text-sm text-gray-600 hover:underline">← Kembali ke toko</a>
+    <h1 class="text-xl sm:text-2xl font-bold text-green-600 flex items-center gap-2">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.3 5.4a1 1 0 001 1.6h12m-13-7h13m-3 5a1 1 0 100-2 1 1 0 000 2zm-10 0a1 1 0 100-2 1 1 0 000 2z" />
+      </svg>
+      Keranjang Belanja
+    </h1>
+    <a href="main.html" class="inline-flex items-center gap-2 text-sm text-green-600 bg-white border border-green-500 px-3 py-1.5 rounded-full shadow-sm hover:bg-green-500 hover:text-white transition duration-300 ease-in-out transform hover:-translate-x-1">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-4 h-4">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+      </svg>
+      Kembali ke toko
+    </a>
   </div>
 </header>
 
 <main class="max-w-4xl mx-auto px-4 py-6">
-  <div id="cart-items" class="space-y-4"></div>
+  <div id="cart-items" class="space-y-4 bg-white rounded-xl shadow p-4 mb-6">
+    <h2 class="text-md font-bold mb-3">Daftar Produk yang Dibeli</h2>
+  </div>
 
   <div class="mt-6 border-t pt-4 text-right">
-    <div class="mb-4 text-left">
-      <input id="nama" type="text" placeholder="Nama Lengkap" required class="w-full border rounded px-4 py-2 mb-2" />
-      <textarea id="alamat" placeholder="Alamat Lengkap" required class="w-full border rounded px-4 py-2"></textarea>
+    <div class="mb-4 grid gap-4 grid-cols-1 sm:grid-cols-2">
+  <div class="col-span-1">
+    <input id="nama" type="text" placeholder="Nama Lengkap" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500" />
+  </div>
+  <div class="col-span-1">
+    <input id="nohp" type="text" placeholder="08xxxxxxx" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500" />
+  </div>
+  <div class="col-span-1 sm:col-span-2">
+    <textarea id="alamat" placeholder="Alamat Lengkap" required rows="3" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500"></textarea>
+  </div>
+</div>
     </div>
-    <h2 id="total" class="text-lg font-semibold mb-1">Total: Rp 0</h2>
-<p class="text-sm text-gray-500 mb-3">* Termasuk biaya layanan 2.5% untuk pengelolaan website</p>
-    <button onclick="checkoutWA()" class="w-full sm:w-auto bg-green-500 text-white px-5 py-2 rounded hover:bg-green-600">
-      Checkout via WhatsApp
-    </button>
+    <div class="bg-white rounded-xl shadow p-4 mb-4">
+      <h2 class="text-md font-bold mb-2">Rincian Pembayaran</h2>
+      <div id="total" class="text-sm text-gray-800 space-y-1">
+        <div class="flex justify-between">
+          <span>Total Belanja</span><span id="belanja-raw">Rp 0</span>
+        </div>
+        <div class="flex justify-between">
+          <span>Biaya Layanan (2.5%)</span><span id="layanan-raw">Rp 0</span>
+        </div>
+        <hr class="my-2">
+        <div class="flex justify-between font-semibold text-green-600">
+          <span>Total Bayar</span><span id="total-bayar">Rp 0</span>
+        </div>
+      </div>
+    </div>
+    <button onclick="checkoutWA()" id="btn-checkout" class="w-full sm:w-auto inline-flex items-center justify-center gap-2 bg-green-600 text-white font-semibold px-6 py-2 rounded-full shadow hover:bg-green-700 transition-all duration-200">
+  <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M16.7 13.3c-.4-.2-2.3-1.1-2.6-1.2-.4-.2-.7-.2-1 .2-.3.4-1 1.2-1.2 1.4-.2.2-.4.3-.8.1s-1.5-.6-2.8-1.9c-1-1-1.7-2.2-1.9-2.6-.2-.4 0-.6.1-.8.2-.2.4-.5.5-.7.2-.2.2-.3.3-.5.1-.2 0-.4 0-.5 0-.2-.9-2.2-1.3-3-.4-.8-.6-.7-.8-.7h-.6c-.2 0-.5.1-.7.3-.2.2-.8.8-.8 2 0 1.2.9 2.4 1 2.6.1.2 1.9 3.4 4.5 4.8 2.6 1.4 2.6.9 3.1.9.5 0 1.5-.5 1.7-1 .2-.5.2-.9.1-1.1.1 0 0 0 0 0z"/></svg>
+  <span id="btn-label">Checkout via WhatsApp</span>
+</button>
   </div>
 </main>
 
@@ -51,20 +92,22 @@ function loadCart() {
 
   if (cart.length === 0) {
     container.innerHTML = "<p class='text-center text-gray-500'>Keranjang Anda kosong.</p>";
-    totalDisplay.textContent = "Total: Rp 0";
+    document.getElementById("belanja-raw").textContent = `Rp ${total.toLocaleString()}`;
+  document.getElementById("layanan-raw").textContent = `Rp ${serviceFee.toLocaleString()}`;
+  document.getElementById("total-bayar").textContent = `Rp ${grandTotal.toLocaleString()}`;
     return;
   }
 
   cart.forEach((item, index) => {
     total += item.price;
     const div = document.createElement("div");
-    div.className = "flex flex-col sm:flex-row justify-between sm:items-center bg-white p-4 rounded shadow-sm gap-2";
+    div.className = "flex flex-col sm:flex-row justify-between sm:items-center bg-white p-4 rounded-xl shadow-md gap-2 border border-gray-200";
     div.innerHTML = `
       <div>
         <p class="font-semibold">${item.name}</p>
         <p class="text-sm text-gray-500">Rp ${item.price.toLocaleString()}</p>
       </div>
-      <button onclick="removeItem(${index})" class="text-red-500 hover:underline text-sm">Hapus</button>
+      <button onclick="removeItem(${index})" class="text-white bg-red-500 hover:bg-red-600 px-4 py-1 rounded text-sm transition-all duration-150">Hapus</button>
     `;
     container.appendChild(div);
   });
@@ -130,6 +173,9 @@ function checkoutWA() {
 
   message += `%0ABiaya Layanan (2.5%): Rp ${serviceFee.toLocaleString()}`;
   message += `%0ATotal Bayar: Rp ${grandTotal.toLocaleString()}`;
+  document.getElementById("btn-label").textContent = "Mengirim...";
+  document.getElementById("btn-checkout").disabled = true;
+  document.getElementById("btn-checkout").classList.add("opacity-60", "cursor-not-allowed");
   const waURL = "https://api.whatsapp.com/send?phone=6287843116000&text=" + message;
   window.location.href = waURL;
 }
