Update Mobile friendly

--- a/keranjang.html
+++ b/keranjang.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -7,19 +6,15 @@
   <title>Keranjang Belanja</title>
   <link href="style.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap');
     body { font-family: 'Outfit', sans-serif; }
-      .animate-fade-in {
-      animation: fadeIn 0.6s ease-in-out;
-    }
+    .animate-fade-in { animation: fadeIn 0.6s ease-in-out; }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
-</style>
-
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans animate-fade-in">
 
@@ -47,17 +42,17 @@
 
   <div class="mt-6 border-t pt-4 text-right">
     <div class="mb-4 grid gap-4 grid-cols-1 sm:grid-cols-2">
-  <div class="col-span-1">
-    <input id="nama" type="text" placeholder="Nama Lengkap" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500" />
-  </div>
-  <div class="col-span-1">
-    <input id="nohp" type="text" placeholder="08xxxxxxx" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500" />
-  </div>
-  <div class="col-span-1 sm:col-span-2">
-    <textarea id="alamat" placeholder="Alamat Lengkap" required rows="3" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500"></textarea>
-  </div>
-</div>
+      <div class="col-span-1">
+        <input id="nama" type="text" placeholder="Nama Lengkap" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500" />
+      </div>
+      <div class="col-span-1">
+        <input id="nohp" type="text" placeholder="08xxxxxxx" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500" />
+      </div>
+      <div class="col-span-1 sm:col-span-2">
+        <textarea id="alamat" placeholder="Alamat Lengkap" required rows="3" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-green-500"></textarea>
+      </div>
     </div>
+
     <div class="bg-white rounded-xl shadow p-4 mb-4">
       <h2 class="text-md font-bold mb-2">Rincian Pembayaran</h2>
       <div id="total" class="text-sm text-gray-800 space-y-1">
@@ -73,10 +68,13 @@
         </div>
       </div>
     </div>
+
     <button onclick="checkoutWA()" id="btn-checkout" class="w-full sm:w-auto inline-flex items-center justify-center gap-2 bg-green-600 text-white font-semibold px-6 py-2 rounded-full shadow hover:bg-green-700 transition-all duration-200">
-  <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M16.7 13.3c-.4-.2-2.3-1.1-2.6-1.2-.4-.2-.7-.2-1 .2-.3.4-1 1.2-1.2 1.4-.2.2-.4.3-.8.1s-1.5-.6-2.8-1.9c-1-1-1.7-2.2-1.9-2.6-.2-.4 0-.6.1-.8.2-.2.4-.5.5-.7.2-.2.2-.3.3-.5.1-.2 0-.4 0-.5 0-.2-.9-2.2-1.3-3-.4-.8-.6-.7-.8-.7h-.6c-.2 0-.5.1-.7.3-.2.2-.8.8-.8 2 0 1.2.9 2.4 1 2.6.1.2 1.9 3.4 4.5 4.8 2.6 1.4 2.6.9 3.1.9.5 0 1.5-.5 1.7-1 .2-.5.2-.9.1-1.1.1 0 0 0 0 0z"/></svg>
-  <span id="btn-label">Checkout via WhatsApp</span>
-</button>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M16.7 13.3c-.4-.2-2.3-1.1-2.6-1.2-.4-.2-.7-.2-1 .2-.3.4-1 1.2-1.2 1.4-.2.2-.4.3-.8.1s-1.5-.6-2.8-1.9c-1-1-1.7-2.2-1.9-2.6-.2-.4 0-.6.1-.8.2-.2.4-.5.5-.7.2-.2.2-.3.3-.5.1-.2 0-.4 0-.5 0-.2-.9-2.2-1.3-3-.4-.8-.6-.7-.8-.7h-.6c-.2 0-.5.1-.7.3-.2.2-.8.8-.8 2 0 1.2.9 2.4 1 2.6.1.2 1.9 3.4 4.5 4.8 2.6 1.4 2.6.9 3.1.9.5 0 1.5-.5 1.7-1 .2-.5.2-.9.1-1.1.1 0 0 0 0 0z"/>
+      </svg>
+      <span id="btn-label">Checkout via WhatsApp</span>
+    </button>
   </div>
 </main>
 
@@ -84,37 +82,42 @@
 function loadCart() {
   const cart = JSON.parse(localStorage.getItem("cart") || "[]");
   const container = document.getElementById("cart-items");
-  const totalDisplay = document.getElementById("total");
   container.innerHTML = "";
   let total = 0;
-  let serviceFee = 0;
-  let grandTotal = 0;
 
   if (cart.length === 0) {
     container.innerHTML = "<p class='text-center text-gray-500'>Keranjang Anda kosong.</p>";
     document.getElementById("belanja-raw").textContent = `Rp ${total.toLocaleString()}`;
-  document.getElementById("layanan-raw").textContent = `Rp ${serviceFee.toLocaleString()}`;
-  document.getElementById("total-bayar").textContent = `Rp ${grandTotal.toLocaleString()}`;
+    document.getElementById("layanan-raw").textContent = `Rp 0`;
+    document.getElementById("total-bayar").textContent = `Rp 0`;
     return;
   }
 
   cart.forEach((item, index) => {
     total += item.price;
     const div = document.createElement("div");
-    div.className = "flex flex-col sm:flex-row justify-between sm:items-center bg-white p-4 rounded-xl shadow-md gap-2 border border-gray-200";
+    div.className = "flex items-center justify-between bg-white p-4 rounded-xl shadow-md gap-2 border border-gray-200";
     div.innerHTML = `
-      <div>
-        <p class="font-semibold">${item.name}</p>
-        <p class="text-sm text-gray-500">Rp ${item.price.toLocaleString()}</p>
+      <div class="flex justify-between items-center w-full">
+        <div class="flex flex-col">
+          <p class="font-semibold">${item.name}</p>
+          <p class="text-sm text-gray-500 text-center">Rp ${item.price.toLocaleString()}</p>
+        </div>
+        <button onclick="removeItem(${index})" class="text-green-500 hover:text-green-700 text-lg px-2 py-1 rounded-full transition-all duration-150" aria-label="Hapus item" title="Hapus produk ini">
+          <svg xmlns='http://www.w3.org/2000/svg' class='w-4 h-4' fill='none' viewBox='0 0 24 24' stroke='currentColor'>
+            <path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M6 18L18 6M6 6l12 12' />
+          </svg>
+        </button>
       </div>
-      <button onclick="removeItem(${index})" class="text-white bg-red-500 hover:bg-red-600 px-4 py-1 rounded text-sm transition-all duration-150">Hapus</button>
     `;
     container.appendChild(div);
   });
 
-  serviceFee = Math.ceil(total * 0.025);
-  grandTotal = total + serviceFee;
-  totalDisplay.textContent = `Total: Rp ${total.toLocaleString()} + Biaya Layanan Rp ${serviceFee.toLocaleString()} = Rp ${grandTotal.toLocaleString()}`;
+  let serviceFee = Math.ceil(total * 0.025);
+  let grandTotal = total + serviceFee;
+  document.getElementById("belanja-raw").textContent = `Rp ${total.toLocaleString()}`;
+  document.getElementById("layanan-raw").textContent = `Rp ${serviceFee.toLocaleString()}`;
+  document.getElementById("total-bayar").textContent = `Rp ${grandTotal.toLocaleString()}`;
 }
 
 function removeItem(index) {
@@ -128,7 +131,7 @@ function checkoutWA() {
   const nama = document.getElementById("nama").value.trim();
   const alamat = document.getElementById("alamat").value.trim();
   const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-  
+
   if (!nama || !alamat) {
     alert("Mohon lengkapi nama dan alamat.");
     return;
@@ -138,7 +141,7 @@ function checkoutWA() {
     return;
   }
 
-  let message = `Halo, saya ingin memesan:%0A`; 
+  let message = `Halo, saya ingin memesan:%0A`;
   const itemMap = {};
   cart.forEach(item => {
     if (!itemMap[item.name]) {
@@ -160,19 +163,10 @@ function checkoutWA() {
   let total = cart.reduce((acc, item) => acc + item.price, 0);
   let serviceFee = Math.ceil(total * 0.025);
   let grandTotal = total + serviceFee;
-  fetch("https://script.google.com/macros/s/YOUR_DEPLOYED_SCRIPT_ID/exec", {
-    method: "POST",
-    body: JSON.stringify({
-      nama: nama,
-      alamat: alamat,
-      produk: cart.map(i => i.name).join(", "),
-      jumlah: cart.length,
-      total: grandTotal
-    })
-  });
 
   message += `%0ABiaya Layanan (2.5%): Rp ${serviceFee.toLocaleString()}`;
   message += `%0ATotal Bayar: Rp ${grandTotal.toLocaleString()}`;
+
   document.getElementById("btn-label").textContent = "Mengirim...";
   document.getElementById("btn-checkout").disabled = true;
   document.getElementById("btn-checkout").classList.add("opacity-60", "cursor-not-allowed");
@@ -182,6 +176,5 @@ function checkoutWA() {
 
 document.addEventListener("DOMContentLoaded", loadCart);
 </script>
-
 </body>
 </html>
